intentional-wanderers/app/assets/stylesheets/posts.scss
.post-full-display {
  position: relative;
  padding: 1em;
  margin-bottom: 1em;
  background-color: rgba(255,255,255,0.35);
  h2 {
    margin: 0.5em 0px;
  }
  p.location {
    margin-top: -0.8em;
    font-size: 0.9em;
  }
  div.body {
    margin: 1em 0px;
  }
}

.positioned-photo {
  div {
    display: block;
    margin: 0.4em;
  }
  p {
    text-align: center;
    font-size: 0.8em;
  }
}

#photo-selector {
  img {
    width: 19%;
    margin: 0.5em 1%;
  }
}

.editable {
  img {
    resize: both;
    overflow: auto;
  }
}

